[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/vehicles/metal_undertow.gd" type="Script" id=1]
[ext_resource path="res://scenes/particles/nitro_flame.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/cameras_&_ui/follow_camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/particles/nitro_flame_cpu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/particles/death_smoke_cpu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/particles/death_smoke.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/materials/vehicles/metal_undertow.material" type="Material" id=7]
[ext_resource path="res://scenes/particles/drift_smoke_cpu.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/sounds/destruction/explosion_large_06.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/particles/drift_smoke.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/sounds/vehicles/gas_leak_01_loop.wav" type="AudioStream" id=11]
[ext_resource path="res://resources/sounds/vehicles/tyre_skid_loop_01.wav" type="AudioStream" id=12]
[ext_resource path="res://resources/sounds/vehicles/engine_generator_loop_02.wav" type="AudioStream" id=13]
[ext_resource path="res://scenes/particles/death_explosion.tscn" type="PackedScene" id=14]
[ext_resource path="res://resources/meshes/vehicles/wheel_0.tres" type="ArrayMesh" id=15]
[ext_resource path="res://scripts/vehicles/wheel_mesh.gd" type="Script" id=16]
[ext_resource path="res://resources/materials/vehicles/mu_wheel.material" type="Material" id=17]
[ext_resource path="res://scripts/vehicles/body_mesh.gd" type="Script" id=18]
[ext_resource path="res://resources/meshes/vehicles/metal_undertow.tres" type="ArrayMesh" id=19]
[ext_resource path="res://scenes/particles/acid.tscn" type="PackedScene" id=20]
[ext_resource path="res://resources/fonts/PixeloidMono.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://scripts/cameras_&_ui/score_label.gd" type="Script" id=22]
[ext_resource path="res://scenes/particles/acid_cpu.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/particles/pull.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/particles/pull_cpu.tscn" type="PackedScene" id=25]
[ext_resource path="res://resources/sounds/vehicles/sci-fi_deep_electric_hum_loop_01.wav" type="AudioStream" id=26]
[ext_resource path="res://scenes/particles/death_explosion_cpu.tscn" type="PackedScene" id=27]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0.837, 0.731, 2.412, -0.837, 0.731, 2.412, 0.661, 1.285, 0.771, -0.661, 1.285, 0.771, 0.661, 1.322, -0.622, -0.661, 1.322, -0.622, 0.825, 0.859, -2.365, -0.825, 0.859, -2.365, 0.898, 0.235, -2.495, -0.898, 0.235, -2.495, 0.924, 0, 1.081, -0.924, 0, 1.081 )

[sub_resource type="DynamicFont" id=19]
size = 9
font_data = ExtResource( 21 )

[node name="RootSpatial" type="Spatial"]
_import_path = NodePath(".")
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="Body" type="VehicleBody" parent="." groups=["combat_vehicle"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.181792, 0 )
collision_mask = 3
mass = 175.51
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )
base_health = 106.0
base_engine_force = 185.76
nitro_force = 3096.0
rocket_force = 0.0
burst_force = 0.0
scene_resource = "res://scenes/vehicles/metal_undertow.tscn"

[node name="WheelFrontLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.799597, 0.130678, 1.7008 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.324
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelFrontRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.130678, 1.70102 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.324
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelBackLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.799987, 0.130655, -1.26664 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.324
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelBackRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.130678, -1.26708 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.324
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="CollisionShape" type="CollisionShape" parent="Body"]
shape = SubResource( 6 )

[node name="CameraBase" parent="Body" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.974, 0.9 )

[node name="BodyMesh" type="MeshInstance" parent="Body"]
physics_interpolation_mode = 1
portal_mode = 3
mesh = ExtResource( 19 )
material/0 = ExtResource( 7 )
script = ExtResource( 18 )
required_setting = 2
wheel_scale = 0.9

[node name="WheelFrontLeft" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0.799597, 0.130678, 1.7008 )
portal_mode = 3
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelFrontLeft")
material/0 = ExtResource( 17 )
script = ExtResource( 16 )
required_setting = 4
wheel_path = NodePath("../../WheelFrontLeft")

[node name="WheelFrontRight" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, -0.8, 0.130678, 1.70102 )
portal_mode = 3
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelFrontRight")
material/0 = ExtResource( 17 )
script = ExtResource( 16 )
required_setting = 4
wheel_path = NodePath("../../WheelFrontRight")

[node name="WheelBackLeft" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0.799987, 0.130655, -1.26664 )
portal_mode = 3
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelBackLeft")
material/0 = ExtResource( 17 )
script = ExtResource( 16 )
required_setting = 4
wheel_path = NodePath("../../WheelBackLeft")

[node name="WheelBackRight" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, -0.8, 0.130678, -1.26708 )
portal_mode = 3
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelBackRight")
material/0 = ExtResource( 17 )
script = ExtResource( 16 )
required_setting = 4
wheel_path = NodePath("../../WheelBackRight")

[node name="ScoreLabel" type="Label3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
portal_mode = 3
pixel_size = 0.003
billboard = 1
double_sided = false
fixed_size = true
font = SubResource( 19 )
script = ExtResource( 22 )

[node name="ShotPositionLeft" type="RayCast" parent="Body"]
transform = Transform( 0.984808, 0, 0.173648, 0, 1, 0, -0.173648, 0, 0.984808, 0, 0.448154, 2.40134 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionMiddle" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.448154, 2.40134 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body"]
transform = Transform( 0.984808, 0, -0.173648, 0, 1, 0, 0.173648, 0, 0.984808, 0, 0.448154, 2.40134 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="PullParticles" parent="Body" instance=ExtResource( 24 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.448, 0 )

[node name="PullCPUParticles" parent="Body" instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.448, 0 )

[node name="ExplosionParticles" parent="Body" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76547, 0 )

[node name="ExplosionCPUParticles" parent="Body" instance=ExtResource( 27 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76547, 0 )

[node name="DeathParticles" parent="Body" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86689, 1.58121 )

[node name="DeathCPUParticles" parent="Body" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86689, 1.58121 )

[node name="DriftParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.877, 0.161, -1.375 )

[node name="Right" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.877, 0.161, -1.375 )

[node name="DriftCPUParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.877, 0.161, -1.375 )

[node name="Right" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.877, 0.161, -1.375 )

[node name="NitroParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/NitroParticles" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.685377, 0.373705, -2.67545 )

[node name="Right" parent="Body/NitroParticles" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.685, 0.374, -2.675 )

[node name="NitroCPUParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/NitroCPUParticles" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.685, 0.374, -2.675 )

[node name="Right" parent="Body/NitroCPUParticles" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.685, 0.374, -2.675 )

[node name="AcidParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.899393, 0 )

[node name="Particles" parent="Body/AcidParticles" instance=ExtResource( 20 )]

[node name="AcidCPUParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.899393, 0 )

[node name="CPUParticles" parent="Body/AcidCPUParticles" instance=ExtResource( 23 )]

[node name="DeathAudio" type="AudioStreamPlayer3D" parent="Body"]
stream = ExtResource( 9 )
unit_size = 4.0
bus = "Effects"

[node name="LoopingAudio" type="Spatial" parent="Body"]

[node name="EngineAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.574206, 1.80683 )
stream = ExtResource( 13 )
unit_size = 0.1
autoplay = true
bus = "Effects"

[node name="DriftAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
stream = ExtResource( 12 )
unit_size = 0.4
autoplay = true
stream_paused = true
bus = "Effects"

[node name="NitroAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.37405, -2.5871 )
stream = ExtResource( 11 )
autoplay = true
stream_paused = true
bus = "Effects"

[node name="MagnetAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.448, 0 )
stream = ExtResource( 26 )
autoplay = true
stream_paused = true
bus = "Effects"

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="ShotTimerAny" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="ShotTimerFront" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4
one_shot = true

[node name="ShotTimerLeft" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4
one_shot = true

[node name="ShotTimerRight" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4
one_shot = true

[node name="StuckTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 30.0

[connection signal="timeout" from="RespawnTimer" to="Body" method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="ShotTimerAny" to="Body" method="_on_ShotTimerAny_timeout"]
[connection signal="timeout" from="ShotTimerFront" to="Body" method="_on_ShotTimerFront_timeout"]
[connection signal="timeout" from="ShotTimerLeft" to="Body" method="_on_ShotTimerLeft_timeout"]
[connection signal="timeout" from="ShotTimerRight" to="Body" method="_on_ShotTimerRight_timeout"]
[connection signal="timeout" from="StuckTimer" to="Body" method="_on_StuckTimer_timeout"]
